--- a/Report/Design & Implementation.tex
+++ b/Report/Design & Implementation.tex
@@ -332,13 +332,13 @@ def receive_video():
   \newline
   \includegraphics{name}
    \item When more than 1 user has connected to the server, both \textbf{Video} and \textbf{Voice} will be automatically enabled. You do not have to input any additional commands to enable them. \textbf{Video, Voice and Text} can be sent/received simultaneously.
-   \newline
-  \includegraphics{name}
-   \item In the \textbf{GUI Text Box}, type \textbf{\{quit\}} to exit from the server.
+  \newline 
+  \item In the \textbf{GUI Text Box}, type \textbf{\{quit\}} to exit from the server.
    \newline
 \end{enumerate}
 
 \section{Limitations}
-Our Program currently only allow peer-to-peer video communications (between two parties).  Further improvement can be made to allow more than 2 clients to connect to the server and chat through video communications at any point of time. The Video Stream sent are compressed through the conversion into JPEG images and thus the resolution for then recevied Video Stream will not be of the best quality. We could implement better compression algorithms for the Video Stream to improvde the Video quality in the future.
+Testing is done one a single computer and as such, we \textbf{unable to open multiple instances of the computer's webcam}. We are thus limited to only being able to demonstrate the sending of video from one client to the receiving of this video on another client in our \textit{Screen Record of Program Execution}.  Also, the voice echo signifies that the voice has been received on the other client. If two separate computers are being connected to the server thorugh a network, our program will be able to send/receive videos between the clients running on the two separate computers. \newline 
+Our Program currently only allow for peer-to-peer video communications (between two parties).  Further improvement can be made to allow more than 2 clients to connect to the server and chat through video communications at any point of time. The Video Stream sent are compressed through the conversion into JPEG images and thus the resolution for then recevied Video Stream will not be of the best quality. We could implement better compression algorithms for the Video Stream to improvde the Video quality in the future.
 
 \end{document}
